developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/OJSERLIB__Application_Applicant__c.object-meta.xml
<CustomObject>
    <label>Application Applicant</label>
    <nameField>
        <label>Application Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>