developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__Business_Address_Full__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Business_Address_Full__c</fullName>
    <formula>UPPER(OJSERLIB__Business_Address_Street__c &amp; &quot; &quot; &amp; OJSERLIB__Business_Address_City__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Address Full</label>
    <type>Text</type>
</CustomField>