developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__Business_Address_State__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Business_Address_State__c</fullName>
    <label>Business Address State</label>
    <length>5</length>
    <type>Text</type>
</CustomField>