developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__Business_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Business_Address_Street__c</fullName>
    <label>Business Address Street</label>
    <length>225</length>
    <type>Text</type>
</CustomField>