developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__Business_Type__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>Major Corporate</fullName>
            </value>
            <value>
                <fullName>Medium Corporate</fullName>
            </value>
            <value>
                <fullName>Associations</fullName>
            </value>
            <value>
                <fullName>Professionals &amp; Clubs</fullName>
            </value>
            <value>
                <fullName>Private Schools</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>LEAP Legal only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>