developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__BusinessAddressCity__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__BusinessAddressCity__c</fullName>
    <formula>UPPER( OJSERLIB__Business_Address_City__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Address City</label>
    <type>Text</type>
</CustomField>