developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__BusinessAddressStreet__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__BusinessAddressStreet__c</fullName>
    <formula>UPPER(OJSERLIB__Business_Address_Street__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Address Street</label>
    <type>Text</type>
</CustomField>