developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__Date_Entity_Established__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Date_Entity_Established__c</fullName>
    <label>Date Entity Established</label>
    <type>Date</type>
</CustomField>