developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Entity_Type__c</fullName>
    <label>Entity Type</label>
    <length>225</length>
    <type>Text</type>
</CustomField>