developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__IsPrimary_Applicant__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsPrimary_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPrimary Applicant</label>
    <type>Checkbox</type>
</CustomField>