developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__IsRegistered_for_GST__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsRegistered_for_GST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRegistered for GST</label>
    <type>Checkbox</type>
</CustomField>