developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__IsSMSCodeVerified__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsSMSCodeVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSMSCodeVerified</label>
    <type>Checkbox</type>
</CustomField>