developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__IsTrust__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsTrust__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTrust</label>
    <type>Checkbox</type>
</CustomField>