developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Legal_Name__c</fullName>
    <formula>UPPER(IF( OJSERLIB__IsTrust__c , OJSERLIB__ParnerShip_Trust_Name__c , OJSERLIB__Name__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Name</label>
    <type>Text</type>
</CustomField>