developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__Legal_Name_and_ABN__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Legal_Name_and_ABN__c</fullName>
    <formula>OJSERLIB__Legal_Name__c &amp; &quot; &quot; &amp; OJSERLIB__ABN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Name and ABN</label>
    <type>Text</type>
</CustomField>