developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__Legal_Name_Quoation__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Legal_Name_Quoation__c</fullName>
    <formula>UPPER( OJSERLIB__Business_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Name - Quoation</label>
    <type>Text</type>
</CustomField>