developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Name__c</fullName>
    <label>Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>