developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__No_of_employees__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__No_of_employees__c</fullName>
    <label>No of employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>