developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__ParnerShip_Trust_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__ParnerShip_Trust_Name__c</fullName>
    <label>ParnerShip Trust Name</label>
    <type>TextArea</type>
</CustomField>