developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__Partnership_Of_Trust__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Partnership_Of_Trust__c</fullName>
    <label>Partnership Of Trust</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>