developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__Postal_AddressState__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Postal_AddressState__c</fullName>
    <label>Postal_AddressState</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>