developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__Settler_Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Settler_Date_Of_Birth__c</fullName>
    <label>Settler Date Of Birth</label>
    <type>Date</type>
</CustomField>