developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__Settler_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Settler_Name__c</fullName>
    <label>Settler Name</label>
    <length>125</length>
    <type>Text</type>
</CustomField>