developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__Trading_As__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Trading_As__c</fullName>
    <label>Trading As</label>
    <length>225</length>
    <type>Text</type>
</CustomField>