developerProject/force-app/main/default/objects/OJSERLIB__Application_Applicant__c/fields/OJSERLIB__Trading_As_Names__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Trading_As_Names__c</fullName>
    <label>Trading As</label>
    <type>TextArea</type>
</CustomField>